--- a/grunker-api-ts/package.json
+++ b/grunker-api-ts/package.json
@@ -12,12 +12,14 @@
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
     "@types/node": "^14.0.5",
+    "@types/pg": "^7.14.3",
     "nodemon": "^2.0.4",
     "typescript": "^3.9.3"
   },
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.2.1"
   }
 }
