--- a/grunker-api-ts/package.json
+++ b/grunker-api-ts/package.json
@@ -4,7 +4,8 @@
   "main": "dist/main.js",
   "license": "MIT",
   "scripts": {
-    "start": "tsc -w --outDir dist/ | nodemon --watch dist/",
+    "start:watch": "tsc -w --outDir dist/ | nodemon --watch dist/",
+    "start": "tsc --outDir dist/ && node dist/main.js",
     "runOnce:opendata": "tsc --outDir dist/ && node dist/OpenDataRunOnce.js"
   },
   "devDependencies": {
