--- a/grunker-api-ts/package.json
+++ b/grunker-api-ts/package.json
@@ -5,20 +5,21 @@
   "license": "MIT",
   "scripts": {
     "start:watch": "tsc -w --outDir dist/ | nodemon --watch dist/",
-    "start": "tsc --outDir dist/ && node dist/main.js",
+    "start": "node_modules/.bin/rimraf dist/ && node_modules/.bin/tsc && node --trace-warnings dist/grunker-api-ts/src/main.js",
     "runOnce:opendata": "tsc --outDir dist/ && node dist/OpenDataRunOnce.js"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/moment": "^2.13.0",
     "@types/node": "^14.0.5",
     "@types/pg": "^7.14.3",
     "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2",
     "typescript": "^3.9.3"
   },
   "dependencies": {
-    "@types/moment": "^2.13.0",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
